fixed windows overflow dialog, custom scrollbar

--- a/youniverse/app/globals.css
+++ b/youniverse/app/globals.css
@@ -80,3 +80,25 @@
 .delete-btn-hover:hover > svg {
  @apply fill-[#454545];
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #454545 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #454545;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+  }
